# node-addon-api-ohos

./: .gitignore  CMakeLists.txt  README.md  napi-inl.h  napi.h
.github/: FUNDING.yml
.github/workflows/: simple-test.yml
example/: CMakeLists.txt  addon.cpp  addon_data.cpp  array_buffer.cpp  async_context.cpp  async_process_queue_worker.cpp  async_process_worker.cpp  async_worker.cpp  async_worker_persistent.cpp  bidint.cpp  binding-swallowexcept.cpp  buffer.cpp  buffer.h  buffer_new_or_copy-inl.h  buffer_no_external.cpp  callbackInfo.cpp  callbackscope.cpp  date.cpp  env_cleanup.cpp  env_misc.cpp  error.cpp  error_handling_for_primitives.cpp  external.cpp  function.cpp  function_reference.cpp  handlescope.cpp  movable_callbacks.cpp  name.cpp  napi_init.cpp  object_reference.cpp  objectwrap.cpp  objectwrap_constructor_exception.cpp  objectwrap_function.cpp  objectwrap_multiple_inheritance.cpp  objectwrap_removewrap.cpp  promise.cpp  reference.cpp  run_script.cpp  thunking_manual.cpp  type_taggable.cpp  (+3 more)
example/addon_build/: CMakeLists.txt  add.cpp
example/addon_compiler/: CMakeLists.txt
example/basic_types/: array.cpp  boolean.cpp  number.cpp  value.cpp
example/common/: test_helper.h
example/dataview/: dataview.cpp  dataview_read_write.cpp
example/object/: delete_property.cpp  finalizer.cpp  get_property.cpp  has_own_property.cpp  has_property.cpp  object.cpp  object_deprecated.cpp  object_freeze_seal.cpp  set_property.cpp  subscript_operator.cpp
example/threadsafe_function/: threadsafe_function_exception.cpp  threadsafe_function_existing_tsfn.cpp  threadsafe_function_unref.cpp
example/typed_threadsafe_function/: typed_threadsafe_function_exception.cpp  typed_threadsafe_function_existing_tsfn.cpp  typed_threadsafe_function_unref.cpp
include/: napi-inl.h  napi.h
ohos_addon_exampl/AppScope/: app.json5
ohos_addon_exampl/entry/src/main/cpp/: napi_init.cpp
ohos_addon_exampl/entry/src/main/cpp/types/libentry/: Index.d.ts
ohos_addon_example/: hvigorfile.ts
ohos_addon_example/AppScope/resources/base/element/: string.json
ohos_addon_example/entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
ohos_addon_example/entry/src/main/cpp/: CMakeLists.txt
ohos_addon_example/entry/src/main/cpp/types/libentry/: Index.d.ts
ohos_addon_example/entry/src/main/cpp/types/libexample/: oh-package.json5
ohos_addon_example/entry/src/main/ets/pages/: Index.ets
ohos_addon_example/entry/src/ohosTest/ets/test/: Ability.test.ets  Buffer.test.ts  Example  List.test.ets  TypedArray.test.ts  TypedArrayBigint.test.ts
ohos_addon_example/entry/src/ohosTest/ets/test/BasicTypes/: Array.test.ets  Array.test.ts  Boolean.test.ets  Boolean.test.ts  Number.test.ts  Value.test.ts
ohos_addon_example/entry/src/ohosTest/ets/test/DataView/: DataView.test.ts  DataViewReadAndWrite.test.ts
ohos_addon_example/entry/src/ohosTest/ets/test/GlobalObject/: GlobalObjectDeleteProperty.test.ts  GlobalObjectGetProperty.test.ts  GlobalObjectHasOwnProperty.test.ts  GlobalObjectSetProperty.test.ts
ohos_addon_example/entry/src/ohosTest/ets/test/util/: assert.test.ts  binding.ts  framework.test.ts  gc.test.ts
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/: Constant.js  core.js  event.js  interface.js  service.js
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/module/assert/: ExpectExtend.js  assertClose.js  assertContain.js  assertFail.js  assertFalse.js  assertInstanceOf.js  assertLarger.js  assertLargerOrEqual.js  assertLess.js  assertLessOrEqual.js  assertNaN.js  assertNegUnlimited.js  assertNull.js  assertPosUnlimited.js  assertPromiseIsPending.js  assertPromiseIsRejected.js  assertPromiseIsRejectedWith.js  assertPromiseIsRejectedWithError.js  assertPromiseIsResolved.js  assertPromiseIsResolvedWith.js  assertThrowError.js  assertUndefined.js  isPromiseLike.js
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/module/assert/deepEquals/: DeepTypeUtils.js  assertDeepEquals.js
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/module/config/: DataDriver.js  Filter.js  configService.js
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/module/coverage/: coverageCollect.js
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/module/kit/: SysTestKit.js
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/module/mock/: ArgumentMatchers.js  ExtendInterface.js  MockKit.js  VerificationMode.js
ohos_addon_example/entry/src/ohosTest/ets/test/util/core/module/report/: LogExpectError.js  OhReport.js  ReportExtend.js
ohos_addon_example/entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ets
package/: CHANGELOG.md  Findnode_addon_api_ohos.cmake  LICENSE  README.md  oh-package.json5
package/src/main/: module.json5
scripts/: build.sh  release.sh
scripts/arkvm/: build_host_libs.sh  compile_abc.sh  run_suites.sh  run_tests.sh  split_tests.sh
test/: README.md
test/runtime/: ark_host_config.ts  console_shim.ts  no_ability_runner.ts
test/source/: array_buffer.test.ts  bigint.test.ts  buffer.test.ts  callbackInfo.test.ts  date.test.ts  error.test.ts  external.test.ts  function.test.ts  function_reference.test.ts  handlescope.test.ts  name.test.ts  object_freeze_seal.test.ts  object_reference.test.ts  objectwrap.test.ts  objectwrap_function.test.ts  objectwrap_multiple_inheritance.test.ts  objectwrap_removewrap.test.ts  promise.test.ts  reference.test.ts  run_script.test.ts  type_taggable.test.ts  typedarray.test.ts
test/source/basic_types/: Array.test.ts  Boolean.test.ts  Number.test.ts  Value.test.ts
test/source/dataview/: DataView.test.ts  DataViewReadAndWrite.test.ts
test/source/object/: object.test.ts  property.test.ts
test/source/utils/: assert.test.ts  binding.ts  framework.test.ts  gc.test.ts
